# multiomics_analysis

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/critical-review/: SKILL.md  critical-reviewer.md
.claude/skills/research-methodology/: SKILL.md
analyses/: README.md
analyses/2026-06-13-ll_vs_hl_p_capacity/: gaps_and_friction.md  paper.md
analyses/2026-06-13-ll_vs_hl_p_capacity/1_question/: notebook.md
analyses/2026-06-13-ll_vs_hl_p_capacity/2_kg_entries/: notebook.md
analyses/2026-06-13-ll_vs_hl_p_capacity/3_framing/: notebook.md
analyses/2026-06-13-ll_vs_hl_p_capacity/4_methods/: notebook.md  p_capacity.py
analyses/2026-06-13-ll_vs_hl_p_capacity/5_analyze/: notebook.md
analyses/2026-06-13-ll_vs_hl_p_capacity/6_evaluate/: notebook.md
analyses/2026-06-15-alteromonas_motility_coculture/: gaps_and_friction.md  paper.md
analyses/2026-06-15-alteromonas_motility_coculture/1_question/: notebook.md
analyses/2026-06-15-alteromonas_motility_coculture/2_kg_entries/: notebook.md
analyses/2026-06-15-alteromonas_motility_coculture/3_framing/: notebook.md
analyses/2026-06-15-alteromonas_motility_coculture/4_methods/: notebook.md
analyses/2026-06-15-alteromonas_motility_coculture/5_analyze/: critical_review.md  notebook.md
analyses/2026-06-15-alteromonas_motility_coculture/6_evaluate/: notebook.md
analyses/2026-06-16-arsenic_response_catalog/: gaps_and_friction.md  paper.md
analyses/2026-06-16-conserved_hypothetical_characterization/: gaps_and_friction.md  paper.md
analyses/2026-06-16-conserved_hypothetical_de/: .gitignore  gaps_and_friction.md  paper.md
analyses/2026-06-17-alteromonas_extruded_proteome/: gaps_and_friction.md  paper.md
analyses/2026-06-23-mit1002_nitrate_mutant_coculture/: framing.md
analyses/2026-06-23-predator_perspective_curation/: predator_perspective_curation_report.md
dashboard/: README.md  build_dashboard.py  index.html
docs/: TEMPLATE_GAPS.md
hooks/: log-mcp-usage.sh
scripts/: preflight.sh
usage/: README.md  multiomics-kg-usage.jsonl  preflight.jsonl
(+145 files in other folders)
